gcc/testsuite/gfortran.dg/c_ptr_tests_5.f03
@@ -11,6 +11,6 @@ contains
     type(c_ptr), value :: c_struct
     type(my_f90_type) :: f90_type
 
-    call c_f_pointer(c_struct, f90_type) ! { dg-error "must have the POINTER" }
+    call c_f_pointer(c_struct, f90_type) ! { dg-error "must be a pointer" }
   end subroutine sub0
 end module c_ptr_tests_5
